@@ -419,9 +419,10 @@ static void process_socket(apr_pool_t *p, apr_socket_t *sock, long conn_id)
                                   SERVER_BUSY_READ, (request_rec *) NULL);
 
     current_conn = ap_new_connection(p, ap_server_conf, sock, conn_id);
-
-    ap_process_connection(current_conn);
-    ap_lingering_close(current_conn);
+    if (current_conn) {
+        ap_process_connection(current_conn);
+        ap_lingering_close(current_conn);
+    }
 }
 
 static void *worker_thread(void *);
