@@ -410,9 +410,10 @@ static void process_socket(apr_pool_t *p, apr_socket_t *sock, int my_child_num, 
 				  SERVER_BUSY_READ, (request_rec *) NULL);
 
     current_conn = ap_new_connection(p, ap_server_conf, sock, conn_id);
-
-    ap_process_connection(current_conn);
-    ap_lingering_close(current_conn);
+    if (current_conn) {
+        ap_process_connection(current_conn);
+        ap_lingering_close(current_conn);
+    }
 }
 /* Sets workers_may_exit if we received a character on the pipe_of_death */
 static void check_pipe_of_death(void)
