@@ -940,9 +940,10 @@ static void child_main(void *child_num_arg)
 
 	current_conn = ap_new_connection(ptrans, ap_server_conf, csd,
                                          THREAD_GLOBAL(child_num));
-
-	ap_process_connection(current_conn);
-        ap_lingering_close(current_conn);
+        if (current_conn) {
+            ap_process_connection(current_conn);
+            ap_lingering_close(current_conn);
+        }
     }
 
     clean_child_exit(0);
